--- a/settings.gradle
+++ b/settings.gradle
@@ -14,3 +14,11 @@ dependencyResolutionManagement {
 }
 rootProject.name = "CaloryTracker"
 include ':app'
+include ':core'
+include ':onboarding'
+include ':onboarding:onboarding_presentation'
+include ':onboarding:onboarding_domain'
+include ':tracker'
+include ':tracker:tracker_presentation'
+include ':tracker:tracker_domain'
+include ':tracker:tracker_data'
