--- a/tracker/tracker_data/src/main/AndroidManifest.xml
+++ b/tracker/tracker_data/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.appiwedia.apps.android.tracker_data">
-
+<manifest package="com.appiwedia.apps.android.tracker_data"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <uses-permission android:name="android.permission.INTERNET"/>
 </manifest>
